--- a/Sources/themes/hugo-creative-theme/layouts/partials/nav.html
+++ b/Sources/themes/hugo-creative-theme/layouts/partials/nav.html
@@ -20,7 +20,7 @@
                 </li>
 
                 <li>
-                    <a class="page-scroll" href="https://forum.namiblinux.org/" nav-type="super-unprecise">{{ with .Site.Params.navigation.main.news }}{{ . }}{{ end }}</a>
+                    <a class="page-scroll" href="https://forum.namiblinux.org/c/announcements" nav-type="super-unprecise">{{ with .Site.Params.navigation.main.news }}{{ . }}{{ end }}</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="{{ .Site.BaseURL }}features">{{ with .Site.Params.navigation.main.services }}{{ . }}{{ end }}</a>
