--- a/Sources/themes/hugo-creative-theme/layouts/download-edition/single.html
+++ b/Sources/themes/hugo-creative-theme/layouts/download-edition/single.html
@@ -29,7 +29,7 @@
 								<hr class="star-primary"/>
 
 								<!-- {{ range (where .Site.Pages ".Type" "download-additional-info-pre")}}
-									<p>{{ .Content | replaceRE ";torrent-x64;" $.Params.Download_sourceforge_torrent | replaceRE ";torrent-x86;" $.Params.download_github_torrent | replaceRE ";baseurl;" .Site.BaseURL | markdownify }}
+									<p>{{ .Content | replaceRE ";torrent-x64;" $.Params.Download_sourceforge_torrent | replaceRE ";torrent-x86;" $.Params.Download_osdn_torrent | replaceRE ";baseurl;" .Site.BaseURL | markdownify }}
 								{{ end }} -->
 
 								<ul class="flex-grid download-edition-grid">
@@ -55,18 +55,18 @@
 									<li class="flex-item">
 								    <div class="content">
 											<div class="top">
-												<img src="{{ .Site.BaseURL }}/img/download/github.svg" alt="Icon" style="width: 200px; height: 200px;" />
-									      <h3>{{ .Site.Params.download_edition.download_github_title }}</h3>
+												<img src="{{ .Site.BaseURL }}/img/download/osdn.svg" alt="Icon" style="width: 200px; height: 200px;" />
+									      <h3>{{ .Site.Params.download_edition.Download_osdn_title }}</h3>
 									      <hr/>
 											</div>
 											<div class="bottom">
 												<div style="margin-top: auto; margin-bottom: 10px;">
-													<a href="{{ .Params.download_github }}" class="btn btn-primary btn-xl" target="_blank" >{{ .Site.Params.download_edition.download_github_button }}</a>
-													<p>{{ with .Params.download_github_torrent }} <a href="{{ . }}" target="_blank">{{ $.Site.Params.download_edition.download_torrent }}</a>{{end}}</p>
+													<a href="{{ .Params.Download_osdn }}" class="btn btn-primary btn-xl" target="_blank" >{{ .Site.Params.download_edition.Download_osdn_button }}</a>
+													<p>{{ with .Params.Download_osdn_torrent }} <a href="{{ . }}" target="_blank">{{ $.Site.Params.download_edition.download_torrent }}</a>{{end}}</p>
 												<div>
 												<div style="margin-top: auto; margin-bottom: 10px; font-size: 12px;">
-													{{ with .Params.download_github_sig }} <a href="{{ . }}" target="_blank">{{ $.Site.Params.download_edition.download_gpg }}</a>{{end}}<br/>
-													SHA1: {{ .Params.download_github_checksum }}
+													{{ with .Params.Download_osdn_sig }} <a href="{{ . }}" target="_blank">{{ $.Site.Params.download_edition.download_gpg }}</a>{{end}}<br/>
+													SHA1: {{ .Params.Download_osdn_checksum }}
 												<div>
 											</div>
 								    </div>
@@ -75,7 +75,7 @@
 
 
 								{{ range (where .Site.Pages ".Type" "download-additional-info-post")}}
-									<p>{{ .Content | replaceRE ";torrent-x64;" $.Params.Download_sourceforge_torrent | replaceRE ";torrent-x86;" $.Params.download_github_torrent | replaceRE ";baseurl;" .Site.BaseURL | markdownify }}
+									<p>{{ .Content | replaceRE ";torrent-x64;" $.Params.Download_sourceforge_torrent | replaceRE ";torrent-x86;" $.Params.Download_osdn_torrent | replaceRE ";baseurl;" .Site.BaseURL | markdownify }}
 								{{ end }}
 		</div>
 		</section>
