--- a/Sources/themes/hugo-creative-theme/layouts/partials/get-involved-nav.html
+++ b/Sources/themes/hugo-creative-theme/layouts/partials/get-involved-nav.html
@@ -16,13 +16,13 @@
 	                <a class="page-scroll" href="{{ .Site.BaseURL }}get-involved" nav-type="exact">{{ .Site.Params.navigation.getinvolved.home }}</a>
 	            </li>
 	            <li>
-	                <a class="page-scroll" href="https://forum.namiblinux.org/categories/" target="_blank">{{ .Site.Params.navigation.getinvolved.forum }}</a>
+	                <a class="page-scroll" href="https://forum.namiblinux.org/" target="_blank">{{ .Site.Params.navigation.getinvolved.forum }}</a>
 	            </li>
 	            <li>
 	                <a class="page-scroll" href="{{ .Site.BaseURL }}donate">{{ .Site.Params.navigation.getinvolved.donate }}</a>
 	            </li>
               <li>
-                  <a class="page-scroll" href="https://forum.namiblinux.org/category/23/bug-report/">{{ .Site.Params.navigation.getinvolved.bugs }}</a>
+                  <a class="page-scroll" href="https://forum.namiblinux.org/c/namib-development/bug-report">{{ .Site.Params.navigation.getinvolved.bugs }}</a>
               </li>
 
             </ul>
