--- a/Sources/themes/hugo-creative-theme/layouts/partials/support-nav.html
+++ b/Sources/themes/hugo-creative-theme/layouts/partials/support-nav.html
@@ -39,7 +39,7 @@
 	           </li> -->
 
 	           <li>
-	                <a class="page-scroll" href="https://forum.namiblinux.org/categories/" target="_blank">{{ .Site.Params.navigation.support.forum }}</a>
+	                <a class="page-scroll" href="https://forum.namiblinux.org/" target="_blank">{{ .Site.Params.navigation.support.forum }}</a>
 	           </li>
 	           <li>
 	                <a class="page-scroll" href="mailto:softwaremeerkat@gmail.com" >{{ .Site.Params.navigation.support.email }}</a>
